2012-12-02: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* SongInspector.h
	  add method to shut up gcc from whining it may not be available


2012-11-25: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* SQLiteAdaptor.[h|m]
	  restructuring, to also save retrieved lyrics from the 
	  web in the SQLite database
	* PlaylistItem.[h|m]
	  restructuring, and adding methods to retrieve, save
	  song lyrics
	* LyricsInspector.m
	  try to lookup lyrics in DB before consulting the web
	  and save found lyrics from web to DB

2012-11-11: Sebastian Reitenbach <sebastia@l00-buggdead-prods.de>
	* GNUmakefile.preamble, MPDCon.pcproj/PC.project
	* link against -lSQLClient, the SongRatings will be saved
	  in a sqlite3 database
	* PlaylistInspector.[h|m], Resources/PlaylistInspector.gorm
	  make it kind of work
	* PlaylistItem.[h|m], get rid of the Private category,
	  and use SQLiteAdaptor to store the SongRatings
	* GNUMakefile, MPDCon.pcproject/PC.project
	  Add SQLiteAdaptor.[h|m]
	* CollectionController.[h|m] new method: getAllTracks

2012-11-10: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* MPDController.[h|m]
	* Add - (void) removeSongRange: (NSRange)songRange;
	  needed for the PlaylistInspector
	* PlaylistController.[h|m]
	* expose a - (NSString *) playlistLength, which gives back
	  the length of the playlist as timestamp, needed
	  by the PlaylistInspector
	* move the loading of the playlist to the init method

2012-10-31: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* PlaylistController.m int -> NSInteger conversions
	* PlaylistInspector.[h|m], AppController.[h|m],
	  GNUmakefile, Resources/PlaylistInspector.gorm,
	  Resources/Player.gorm MPDCon.pcproj/PC.projec
	* Add PlaylistInspector, empty so far

2012-10-29: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GNUmakefile
	* PlaylistController.h
	* PlaylistController.m
	* PlaylistItem.h
	* PlaylistItem.m
	* SongRatingCell.h
	* SongRatingCell.m
	* MPDCon.pcproj/PC.project